# rtos-cpp-controller

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: FreeRTOSConfig.h  Queue.hpp  Task.hpp
src/: Task.cpp  main.cpp
